--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,14 @@ jar {
 	}
 }
 
+// testreports jacoco
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+}
+
 // Define the main class for the application
 mainClassName = 'ohtu.ohtuvarasto.Main'
 
