--- a/build.gradle
+++ b/build.gradle
@@ -43,5 +43,17 @@ jacocoTestReport {
 }
 
 // Define the main class for the application
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
+    }
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: ['main/**'])
+        })
+    }
+}
 mainClassName = 'ohtu.ohtuvarasto.Main'
 
